--- a/Website/app/static/css/style.css
+++ b/Website/app/static/css/style.css
@@ -371,7 +371,7 @@ h2 {
     border: 8px inset #cccccc;
     background-color: rgba(0, 255, 255, 0.95);
     place-content: center;
-    display: none;
+    display: none
 }
 
 .modal-nd-updateInf {
@@ -823,9 +823,9 @@ h2 {
 .info-pet-bill {
     display: grid;
     width: 90%;
-    height: 95%;
+    height: 300px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
     border-radius: 91px 91px 91px 91px;
     -webkit-border-radius: 91px 91px 91px 91px;
@@ -840,6 +840,7 @@ h2 {
 }
 
 .confirm-info-pet-bill {
+    height: 180px;
     display: grid;
     grid-template-rows: 1fr 3fr 1fr;
     place-items: center;
