--- a/Website/app/templates/customer/profile_customer.html
+++ b/Website/app/templates/customer/profile_customer.html
@@ -1,33 +1,36 @@
 {% extends 'customer/index.html' %}
 {% load static %}
 {% block profile_customer %}
-  <div id="editModal-updateInf" class="modal-updateInf">
-    <div class="modal-nd-updateInf">
-      <div class="modal-close-item-updateInf">
-        <span class="close-updateInf">&times;</span>
-      </div>
-      <div style="color: black;" class="modal-title-item-updateInf">Cập nhật thông tin</div>
-      <div class="modal-email-item-updateInf">
-        <label style="color: black;" for="address">Email:</label>
-        <input style="width: 157px;" type="text" id="email" name="email" required />
-      </div>
-      <div class="modal-address-item-updateInf">
-        <label style="color: black;" for="address">Địa chỉ:</label>
-        <input style="width: 148px;" type="text" id="address" name="address" required />
-      </div>
+  {% block modal %}
+    <div id="editModal-updateInf" class="modal-updateInf">
+      <div class="modal-nd-updateInf">
+        <div class="modal-close-item-updateInf">
+          <span class="close-updateInf">&times;</span>
+        </div>
+        <div style="color: black;" class="modal-title-item-updateInf">Cập nhật thông tin</div>
+        <div class="modal-email-item-updateInf">
+          <label style="color: black;" for="address">Email:</label>
+          <input style="width: 157px;" type="text" id="email" name="email" required />
+        </div>
+        <div class="modal-address-item-updateInf">
+          <label style="color: black;" for="address">Địa chỉ:</label>
+          <input style="width: 148px;" type="text" id="address" name="address" required />
+        </div>
 
-      <div class="modal-phone-item-updateInf">
-        <label style="color: black;" for="phone">Số điện thoại :</label>
-        <input style="width: 100px;" type="text" id="phone" name="phone" required />
-      </div>
+        <div class="modal-phone-item-updateInf">
+          <label style="color: black;" for="phone">Số điện thoại :</label>
+          <input style="width: 100px;" type="text" id="phone" name="phone" required />
+        </div>
 
-      <input type="hidden" id="csrfToken-inf" value="{{ csrf_token }}" />
+        <input type="hidden" id="csrfToken-inf" value="{{ csrf_token }}" />
 
-      <div class="modal-save-item-updateInf">
-        <button id="saveBtn-updateInf">Lưu thay đổi</button>
+        <div class="modal-save-item-updateInf">
+          <button id="saveBtn-updateInf">Lưu thay đổi</button>
+        </div>
       </div>
     </div>
-  </div>
+  {% endblock %}
+
   <div id="editModal-updateImg" class="modal-updateImg">
     <div class="modal-nd-updateImg">
       <div class="modal-close-item-updateImg">
