--- a/Website/app/templates/customer/booking_date.html
+++ b/Website/app/templates/customer/booking_date.html
@@ -11,11 +11,13 @@
 
           <input type="date" id="appointment_date" name="date" value="{{ date|default:'' }}" required />
 
-          <button type="submit">Xác nhận</button>
+          <button type="submit" name='action' value='confirmBtn'>Xác nhận</button>
         </form>
       </div>
       <p class="mid-title-layout-booking-date">Danh sách bác sĩ có lịch trống</p>
-      <a href="{% url 'booking' pet_id=pet_id date=date %}" onclick="return handleSkip('{{ date|default:'' }}')" class="left-title-layout-booking-date">Bỏ qua</a>
+      {% block skip %}
+        <a href="{% url 'booking' pet_id=pet_id date=date %}" onclick="return handleSkip('{{ date|default:'' }}')" class="left-title-layout-booking-date">Bỏ qua</a>
+      {% endblock %}
     </div>
     <div class="content-layout-booking-date">
       <div class="title-content-layout-booking-date">
@@ -26,32 +28,34 @@
       </div>
       <div style="height: 400px; overflow-y: auto;">
         {% if schedules %}
-          {% for schedule in schedules %}
-            <div class="item-content-layout-booking-date">
-              <p style="  margin-bottom: 10px;">{{ schedule.veterinarian.real_name_veterinarian }}</p>
-              <div style="  margin-bottom: 10px;">
-                {% if schedule.morning %}
-                  <a href="{% url 'booking' pet_id=pet_id date=date %}?vet_id={{ schedule.veterinarian.id }}&part=morning"><img style="height: 20px; width: auto;" src="{% static 'images/ok.png' %}" alt="ok" /></a>
-                {% else %}
-                  <img style="height: 20px; width: auto;" src="{% static 'images/busy.png' %}" alt="busy" />
-                {% endif %}
+          {% block show_schedule %}
+            {% for schedule in schedules %}
+              <div class="item-content-layout-booking-date">
+                <p style="  margin-bottom: 10px;">{{ schedule.veterinarian.real_name_veterinarian }}</p>
+                <div style="  margin-bottom: 10px;">
+                  {% if schedule.morning %}
+                    <a href="{% url 'booking' pet_id=pet_id date=date %}?vet_id={{ schedule.veterinarian.id }}&part=morning"><img style="height: 20px; width: auto;" src="{% static 'images/ok.png' %}" alt="ok" /></a>
+                  {% else %}
+                    <img style="height: 20px; width: auto;" src="{% static 'images/busy.png' %}" alt="busy" />
+                  {% endif %}
+                </div>
+                <div style="  margin-bottom: 10px;">
+                  {% if schedule.afternoon %}
+                    <a href="{% url 'booking' pet_id=pet_id date=date %}?vet_id={{ schedule.veterinarian.id }}&part=afternoon"><img style="height: 20px; width: auto;" src="{% static 'images/ok.png' %}" alt="ok" /></a>
+                  {% else %}
+                    <img style="height: 20px; width: auto;" src="{% static 'images/busy.png' %}" alt="busy" />
+                  {% endif %}
+                </div>
+                <div style="  margin-bottom: 10px;">
+                  {% if schedule.night %}
+                    <a href="{% url 'booking' pet_id=pet_id date=date %}?vet_id={{ schedule.veterinarian.id }}&part=night"><img style="height: 20px; width: auto;" src="{% static 'images/ok.png' %}" alt="ok" /></a>
+                  {% else %}
+                    <img style="height: 20px; width: auto;" src="{% static 'images/busy.png' %}" alt="busy" />
+                  {% endif %}
+                </div>
               </div>
-              <div style="  margin-bottom: 10px;">
-                {% if schedule.afternoon %}
-                  <a href="{% url 'booking' pet_id=pet_id date=date %}?vet_id={{ schedule.veterinarian.id }}&part=afternoon"><img style="height: 20px; width: auto;" src="{% static 'images/ok.png' %}" alt="ok" /></a>
-                {% else %}
-                  <img style="height: 20px; width: auto;" src="{% static 'images/busy.png' %}" alt="busy" />
-                {% endif %}
-              </div>
-              <div style="  margin-bottom: 10px;">
-                {% if schedule.night %}
-                  <a href="{% url 'booking' pet_id=pet_id date=date %}?vet_id={{ schedule.veterinarian.id }}&part=night"><img style="height: 20px; width: auto;" src="{% static 'images/ok.png' %}" alt="ok" /></a>
-                {% else %}
-                  <img style="height: 20px; width: auto;" src="{% static 'images/busy.png' %}" alt="busy" />
-                {% endif %}
-              </div>
-            </div>
-          {% endfor %}
+            {% endfor %}
+          {% endblock %}
         {% else %}
           <h3 style="justify-self: center;">Không có bác sĩ làm việc vào ngày này.</h3>
         {% endif %}
