--- a/Website/app/templates/staff/index.html
+++ b/Website/app/templates/staff/index.html
@@ -55,6 +55,10 @@
       {% endblock %}
 
       {% block awaiting_booking %}
+
+      {% endblock %}
+
+      {% block bookingInf_staff %}
       {% endblock %}
       <script>
         function confirmLogout() {
