--- a/Website/app/templates/staff/profile_staff.html
+++ b/Website/app/templates/staff/profile_staff.html
@@ -76,14 +76,6 @@
         {% endif %}
       </p>
     </div>
-    <div class="item-text6-profile item-text-profile">
-      <button class="layout-right" id="editBtn-updateInf">Cập nhật thông tin</button>
-    </div>
+    <div class="item-text6-profile item-text-profile"></div>
   </div>
-
-  <script>
-    function confirmChange() {
-      return confirm('Xác nhận thay đổi thông tin !')
-    }
-  </script>
 {% endblock %}
